# termynow-agent

./: install.sh  pyproject.toml
termnun_agent/: api_client.py  cli.py  client.py  config.py  fs_ops.py  onboarding.py  pty_session.py  reconnect.py
termnun_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
termnun_agent/services/: __init__.py  macos_launchd.py
termynow_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
